Fix issue of breadcrumb and user tools overlapping each other
In tablet mode, breadcrump text and user tools can overflow on top
of each other, which looks like a mess. This is now fixed by
adding a background color to the user tools (with slight opacity),
so that the user tools "wins" when the sections would overlap.

--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -1,3 +1,11 @@
+.masthead {
+  .container {
+    .user-tools {
+      background-color: rgba(34, 34, 34, 0.7);
+    }
+  }
+}
+
 .g-upper-body-title {
   @include smalldesktop {
     margin-left: calc(((100vw - 900px) / 2) - 20px);
